--- a/config/west.yml
+++ b/config/west.yml
@@ -10,7 +10,7 @@ manifest:
       revision: feat/pointers-move-scroll
       import: app/west.yml
     - name: zmk-pmw3610-driver
-      remote: kumamuk-git
+      remote: razily-sub
       revision: main
   self:
     path: config
